Add pip support
- Add production and development requirements text files for pip
- Update Dockerfile to use pip instead of conda
- Add .env and other misc files to .dockerignore
- Update README

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,14 @@
+# project files
 .git
 .gitignore
+.pre-commit-config.yaml
+requirements-dev.txt
+
+# environment variables
+.env
+.example.env
+
+# Python files
+__pycache__
+*.py[cod]
+env
