--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,12 @@
 bandit==1.7.4
 black==22.1.0
+dice==3.1.2
 discord.py==1.7.3
+Jinja2==3.1.2
 pre-commit==2.17.0
 pylint==2.13.0
 python-dotenv==0.20.0
+PyYAML==6.0
 requests==2.28.1
 safety==1.10.3
 tqdm==4.64.0
